# terminfo-lean

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yaml  release.yaml  rust.yml  security.yaml
examples/: example.rs  parse.rs  set_attributes.rs  simple.rs
src/: capability.rs  database.rs  error.rs  expand.rs  lib.rs  locate.rs  parse.rs
src/parser/: compiled.rs  expansion.rs  mod.rs  util.rs
tests/: all_terminals.rs  parser.rs
