[package]
name    = "terminfo-lean"
version = "0.1.0"
edition = "2021"

authors = ["Pavel Roskin <plroskin@gmail.com>", "meh. <meh@schizofreni.co>"]
license = "Apache-2.0"

description = "Terminal information."
repository  = "https://github.com/proski/terminfo-lean"
keywords    = ["terminal", "terminfo", "termcap", "term"]
categories  = ["command-line-interface"]

build = "build.rs"

[dependencies]
nom = { version = "7", default-features = false, features = ["std"] }
phf = "0.11"
fnv = "1.0"

[build-dependencies]
phf_codegen = "0.11"
